# stealthgraph-d4d5

./: .gitignore  .mcp.json  PLATFORM.md  README.md  compose.yaml
.claude/: launch.json
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_cases.py
backend/app/: main.py  models.py
backend/app/core/: config.py  database.py  identity.py
backend/app/engine/: __init__.py  dataset.py  fixtures.py  fusion.py  graph.py  live_graph.py  modules.py  stealthmole.py
backend/app/routes/: _query_parsing.py  beliefs.py  cases.py  graph.py  live.py  users.py
backend/tests/: conftest.py  test_api.py  test_engine.py  test_stealthmole.py
frontend/: .gitignore  eslint.config.mjs  next.config.ts  nginx.conf.template  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Cases.tsx  GraphCanvas.tsx  StealthGraph.tsx  WarmingBanner.tsx
frontend/components/ui/: separator.tsx
frontend/lib/: identity.ts  stealthgraph-live.ts  stealthgraph.ts  trust.ts  warming.ts
